--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@ font-size: 38px;
 	            <div class="col-md-12 playvid">
 	               <!-- <a class="fa fa-play-circle popup-vimeo wow zoomInDown" data-wow-duration="1s" data-wow-delay="0.9s" href="http://www.cywlys.cn/ck/index.php?url=https://up.ly93.cc/down/rIf4ANRlymE1bwLF.webm"></a>-->
 	           
-	          <video width="100%" height="360px" src="https://www.aliyundrive.com/s/7FLheCjSzFj" type="video/webm" controls="controls"></video>
+	          <video width="100%" height="360px" src="video/wewe.mp4" type="video/webm" controls="controls"></video>
 
 </video>
 <audio id="myaudio">
-    <source title="" src="<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//https://music.163.com/outchain/player?type=2&id=1842902461&auto=1&height=66"></iframe>">
+    <source title="" src="<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1842902461&auto=1&height=66"></iframe>">
    >
 </audio>
                 
@@ -488,8 +488,8 @@ font-size: 38px;
 			
 		
 					<div class="heading">
-	            											<h3 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">OURSERENDIPITY</h3>
-																<p class="wow fadeInUp" data-wow-delay="0.7s">          所谓恋爱不是通过另一个人的视角来“校准”自己。一个人的时候总会觉得抱歉，总会觉得自己很糟糕，总会忘了自己到底什么样。一个好的爱人是会耐心帮你一点点对焦的人，一段好的爱情是“把我的眼睛借给你，来看看你到底有多好。“</p>
+	            											<h3 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">李老师的摘抄本</h3>
+																<p class="wow fadeInUp" data-wow-delay="0.7s">          当我跨过沉沦的一切，向着永恒开战的时候，你是我的军旗。</p>
 												</div>
 		
 	
@@ -554,7 +554,7 @@ font-size: 38px;
                     <div class="row">
                     <div class="col-md-12">
                                                     <p>© LYVHJC &amp; 2022- All  </p>
-<p><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//https://music.163.com/outchain/player?type=2&id=1842902461&auto=1&height=66"></iframe></p>
+<p><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1842902461&auto=1&height=66"></iframe></p>
 </div>                                            </div>
                 </div>
                 </div>
