--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ font-size: 38px;
 			
 		
 					<div class="heading" id="#wmaq" title="wmaq">
-	            											<h2 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">关于我们</h2>
+	            											<h2 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">两位老师</h2>
 																<p class="wow fadeInUp" data-wow-delay="0.7s">距离并不是问题，相向而行才是关键。</p>
 												</div>
 		
@@ -259,6 +259,20 @@ font-size: 38px;
 	                                    <div id="dslc-theme-content"><div id="dslc-theme-content-inner"><p>“等一下何老师，我先过个生日”</p>
 </div></div>	                                </div>
 	                            </div>
+
+															</li>
+												<li class="timeline-inverted negative50">
+							<div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s"><i class="."></i></div>
+							<div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s">
+								<div class="timeline-heading">
+									<h4 class="timeline-title">圣诞快乐</h4>
+									<p><small class="text-muted"><i class=""></i> 12/25/2021 -Lion King</small></p> 
+								</div>
+								<img src="/swf/smile.jpeg" width="100%" />
+								<div class="timeline-body">
+									<div id="dslc-theme-content"><div id="dslc-theme-content-inner"><p>微微一笑很倾城</p>
+					</div></div>	                                </div>
+							</div>
 	                                <!-- </li>
 
 	                        
