--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ font-size: 38px;
 	                            </div>
 	                            
 	                                     </li>
-	                    	                        <li class="negative25">
+	                    	                        <li class="timeline-inverted negative50">
 	                            <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s"><i class=""></i></div>
 	                            <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s">
 	                                <div class="timeline-heading">
