--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ font-size: 38px;
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                        
                     </button>
-                    <a class="navbar-brand" href="http://plutonthemes.com/themes/ilove"><img src="images/logo.png" alt="ilove Wordpress Theme"></a>
+                    <a class="navbar-brand" href="https://www.bilibili.com/video/BV1Jr4y117tY"><img src="images/logo.png" alt="ilove Wordpress Theme"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -583,7 +583,7 @@ font-size: 38px;
                 <div class="container">
                     <div class="row">
                     <div class="col-md-12">
-                                                    <p>© LYVHJC &amp; 2022- All  </p>
+                                                    <p>© LYVHJC &amp; 2022 - End of The World  </p>
 <p><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1842902461&auto=1&height=66"></iframe></p>
 </div>                                            </div>
                 </div>
