--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ font-size: 38px;
 					</div>
 
 	                            
-	                            	                        </li>
+	                            	                        <!-- </li>
 	                    	                        <li class="timeline-inverted negative50">
 	                            <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s"><i class="."></i></div>
 	                            <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s">
@@ -261,7 +261,7 @@ font-size: 38px;
 	                                <div class="timeline-body">
 	                                    <div id="dslc-theme-content"><div id="dslc-theme-content-inner"><p>“回来我比比咱俩谁字丑”</p>
 </div></div>	                                </div>
-	                            </div>
+	                            </div> -->
 
 				
 
