--- a/index.html
+++ b/index.html
@@ -568,6 +568,16 @@ font-size: 38px;
 																	忽然想要拿给你，于是拿给你，不辞万里。
 																	</p>
 												</div>
+
+
+
+					<div class="heading">
+						<h3 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">承诺</h3>
+							<p class="wow fadeInUp" data-wow-delay="0.7s">    李老师：我可以做出的保证是在我这里，我是一个有距离感的人，如果有一天我想要分手，一定会有不得已的原因，比如你父母实在不接受我之类的，绝对不会是因为身边出现另一个人，或者“没有新鲜感了" ，我甚至可以想到我的大学生活因为有你所以我可以更专注干学习，并且我很清楚的是只要你还喜欢我我对你的喜欢就不会变，只会越来越坚定。     </p>
+
+							<p class="wow fadeInUp" data-wow-delay="0.7s">     何老师：和你在一起是我尽力去达成一段理想的感情的最后一次努力，我会用尽所有的努力来争取一直和你在一起。
+								</p>
+										</div>
 		
 	
 			
