--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="page1-lovexhj1">
-													<img class="cat" src="./images/cat2.gif" alt="cat2">
+													<img class="cat" src="images/logoo.png" alt="cat2">
 													<p class="catText">你常对我发的表情 ↑</p>
 													<p>上次也是花心思写了一个小玩意给你</p>
 													<p>但我觉得整体设计&&界面都过于<b>LOW</b></p>
@@ -535,7 +535,7 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="page1-lovexhj1">
-													<img class="cat" src="./images/cat3.gif" alt="cat3">
+													<img class="cat" src="images/logoo.png" alt="cat3">
 													<p class="catText">抱死你 ↑</p>
 													<p>这次我<b>超级超级超级超级</b></p>
 													<p>认真的写了一遍</p>
@@ -548,7 +548,7 @@
 											</div>
 											<div class="swiper-slide">
 												<div class="page1-lovexhj1">
-													<img class="cat" src="./images/cat4.gif" alt="cat4">
+													<img class="cat" src="images/logoo.png" alt="cat4">
 													<p class="catText">拍你猪头 ↑</p>
 													<p>这次应该不会太难看了吧</p>
 													<p>希望你喜欢呀</p>
@@ -560,6 +560,7 @@
 										<div class="swiper-pagination swiper-pagination-lovexhj1"></div>
 									</div>
 								</div>
+								<!-- todo -->
 
 
 								<div id="dslc-module-4"
