--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8" />
 	<title>EverLastingLOVE</title>
 	<meta name="viewport" content="width=device-width">
+	<!-- todo -->
+	<link rel="icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
 	<link rel='stylesheet' id='contact-form-7-css' href='css/styles.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='dslc-main-css-css' href='css/main.min.css' type='text/css' media='all' />
@@ -30,6 +32,9 @@
 	<link rel='stylesheet' id='custom-css' href='css/custom.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='redux-google-fonts-css' href='css/a1aa99bf24f341da9dbe08e29344feac.css' type='text/css'
 		media='all' />
+	<!-- todo -->
+	<link rel="stylesheet" type="text/css" href="./css/lovexhj.css"> 
+	<!-- todo -->
 	<script type='text/javascript' src='js/jquery.js'></script>
 	<script type='text/javascript' src='js/jquery-migrate.min.js'></script>
 	<script type='text/javascript' src='js/plugins.js'></script>
