--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	<link rel='stylesheet' id='redux-google-fonts-css' href='css/a1aa99bf24f341da9dbe08e29344feac.css' type='text/css'
 		media='all' />
 	<!-- todo -->
-	<link rel="stylesheet" type="text/css" href="./css/lovexhj.css"> 
+	<link rel="stylesheet" type="text/css" href="./css/love.css"> 
+	<link rel="stylesheet" href="./css/swiper.css">
+    <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
 	<!-- todo -->
 	<script type='text/javascript' src='js/jquery.js'></script>
 	<script type='text/javascript' src='js/jquery-migrate.min.js'></script>
