--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 								<div class="swiper-slide">
 									<div class="page1-lovexhj1">
 										<img src="https://q1.qlogo.cn/g?b=qq&nk=304915556&s=640" alt="xhj">
-										<img src="./images/cat.gif" alt="cat">
+										<img src="images/logoo.png" alt="cat">
 										<img src="https://q1.qlogo.cn/g?b=qq&nk=1656071287&s=640" alt="tqy">
 										<p id="lovetime"></p>
 										<p>我也不知道该准备一点什么给你逗你开心</p>
