--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,23 @@
 	<script type='text/javascript' src='js/comment-reply.min.js'></script>
 	<script type='text/javascript' src='js/wp-embed.min.js'></script>
 	<script type='text/javascript' src='js/jquery.nav.js'></script>
+
+
+	<!-- todo -->
+	<script src="https://cdn.bootcss.com/wow/1.1.2/wow.js"></script>
+    <script src="./js/typeit.min.js"></script>
+    <script src="./js/swiper-3.4.2.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.0/jquery.js"></script>
+
+    <script src="./js/talk.js"></script>
+    <script src="./js/swiper.js"></script>
+    <script src="./js/su.js"></script>
+    <script>
+        (function () {
+            new WOW().init()
+        })()
+    </script>
+
 </body>
 
 </html>
